# yacl

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  BUILD.bazel  BUILD_without_APSI.bazel  INTEGRATED_LIBRARIES.md  README.md  WORKSPACE  WORKSPACE_without_APSI  a-main.d  a-protocol.d  refresh_compile_commands.sh  run_mpsi_figure_q3_mal.sh
bazel/: BUILD.bazel  FourQlib.BUILD  aby.BUILD  aby3.BUILD  apsi.BUILD  apsi_seal_4_1_compat.patch  blst.BUILD  cmake_import.bzl  configure_make_import.bzl  cppzmq.BUILD  curve25519-donna.BUILD  default_targets.txt  ed25519-donna.BUILD  eigen.BUILD  flatbuffers.BUILD  fmtlib.BUILD  function2.BUILD  glog.BUILD  gmp.BUILD  jsoncpp.BUILD  kuku.BUILD  lib25519.BUILD  libdivide.BUILD  libote.BUILD  libote_fetch_mkdir.patch  log4cplus.BUILD  mp_spdz.BUILD  ms_gsl.BUILD  ms_gsl_empty_static.patch  msgpack.BUILD  nlohmann_json.BUILD  ntl.BUILD  openfhe.BUILD  openssl.BUILD  relic.BUILD  repositories.bzl  seal.BUILD  secure_join_libote_compat.patch  securepsu.BUILD  securepsu_bazel_compat.patch  (+6 more)
bazel/patches/: gflags_google_namespace.patch
scripts/: gen_clangd_compdb.py  update_yacl_remotes.sh
yacl/base/: int128.h
yacl/crypto/ecc/FourQlib/: BUILD.bazel  FourQ_group.cc
yacl/crypto/ecc/libsodium/: ed25519_group.cc  sodium_private.h
yacl/crypto/hash/: BUILD.bazel  hash_interface.h
yacl/crypto/rand/: rand.h
yacl/io/circuit/: bristol_fashion.cc  bristol_fashion.h
yacl/kernel/algorithms/: BUILD.bazel  base_ot.cc  base_ot.h
yacl/link/: context.h  test_util.h
yacl/link/transport/: channel.h
yacl/math/f2k/: f2k.h  f2k_test.cc
yacl/utils/: compile_time_utils.h  serialize.h  serializer.h  thread_pool.cc  thread_pool.h
yacl/utils/spi/: item.h  spi_factory.h
yacl/utils/spi/sketch/: scalar_call.h
