# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_foreign_cc//toolchains/native_tools:native_tools_toolchain.bzl", "native_tool_toolchain")

package(default_visibility = ["//visibility:public"])

native_tool_toolchain(
    name = "usr_bin_m4_tool",
    path = "/usr/bin/m4",
)

native_tool_toolchain(
    name = "usr_bin_autoconf_tool",
    path = "/usr/bin/autoconf",
)

native_tool_toolchain(
    name = "usr_bin_automake_tool",
    path = "/usr/bin/automake",
)

native_tool_toolchain(
    name = "usr_bin_make_tool",
    path = "/usr/bin/make",
)

native_tool_toolchain(
    name = "usr_bin_pkgconfig_tool",
    path = "/usr/bin/pkg-config",
)

toolchain(
    name = "usr_bin_m4_toolchain",
    toolchain = ":usr_bin_m4_tool",
    toolchain_type = "@rules_foreign_cc//toolchains:m4_toolchain",
)

toolchain(
    name = "usr_bin_autoconf_toolchain",
    toolchain = ":usr_bin_autoconf_tool",
    toolchain_type = "@rules_foreign_cc//toolchains:autoconf_toolchain",
)

toolchain(
    name = "usr_bin_automake_toolchain",
    toolchain = ":usr_bin_automake_tool",
    toolchain_type = "@rules_foreign_cc//toolchains:automake_toolchain",
)

toolchain(
    name = "usr_bin_make_toolchain",
    toolchain = ":usr_bin_make_tool",
    toolchain_type = "@rules_foreign_cc//toolchains:make_toolchain",
)

toolchain(
    name = "usr_bin_pkgconfig_toolchain",
    toolchain = ":usr_bin_pkgconfig_tool",
    toolchain_type = "@rules_foreign_cc//toolchains:pkgconfig_toolchain",
)

config_setting(
    name = "yacl_build_as_release",
    values = {"compilation_mode": "opt"},
)

config_setting(
    name = "yacl_build_as_debug",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "yacl_build_as_fast",
    values = {"compilation_mode": "fastbuild"},
)
